pikachu+poke ball

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no,viewport-fit=cover">
     <title>画皮卡丘</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="media.css">
 </head>
 <body>
     <div class="skin">
@@ -29,6 +29,9 @@
                     <div class="yuan2"></div>
                 </div>
             </div>
+        </div>
+        <div class="ball">
+            <div class="innerBall"></div>
         </div>
     </div>
     <script src="main.js"></script>
