--- a/src/index2.html
+++ b/src/index2.html
@@ -16,7 +16,17 @@
         *::before {
             box-sizing: border-box;
          }
-  
+         .skin * {
+            padding: 0;
+            margin: 0;
+        }
+        .skin * {
+            box-sizing: border-box;
+        }
+        .skin *::after,
+        .skin *::before {
+            box-sizing: border-box;
+        }
         #html{
             position: fixed;
             bottom: 0;
@@ -30,7 +40,6 @@
             left: 0;
             width: 100%;
             height: 50vh;
-            border: 1px solid red;
             overflow-y: scroll;
         }
         /* 隐藏滚动条 */
@@ -53,6 +62,74 @@
             margin-bottom: 10px;
             padding: 4px 8px;
         }
+      
+        .nose:hover {
+            animation: wave 300ms infinite linear;
+            transform-origin: 50% 100%;
+        }
+        @keyframes wave {
+            0% {
+            transform: rotate(0deg);
+            }
+            33% {
+            transform: rotate(-5deg);
+            }
+            66% {
+            transform: rotate(5deg);
+            }
+            100% {
+            transform: rotate(0deg);
+            }
+        }
+        .face > img{
+            display: none;
+        }
+        @keyframes roll {
+            0% {
+             transform: translateX(0) rotate(0deg);
+             }
+            20% {
+             transform: translateX(-100px) rotate(360deg);
+             }
+            40% {
+             transform: translateX(-100px) rotate(360deg);
+            }
+            80% {
+                transform: translateX(100px) rotate(-360deg);
+            }
+
+            100% {
+                transform: translateX(100px) rotate(-360deg);
+            }
+         }
+
+         @keyframes blink {
+            0% {
+                opacity: 0.1;
+            }
+            25%,
+            65% {
+                opacity: 1;
+                box-shadow: 0 0 5px 3px rgba(255, 255, 255, 0.3),
+                 0 0 5px 9px rgba(255, 54, 54, 0.5);
+            }
+            90% {
+              opacity: 0.1;
+            }
+        }
+        .ball{
+            background: rgb(255, 27, 27);
+            background: rgb(255, 27, 27);
+            background: linear-gradient(
+                180deg,
+             rgba(255, 27, 27, 1) 48%,
+             rgba(0, 0, 0, 1) 48%,
+             rgba(0, 0, 0, 1) 52%,
+             rgba(255, 255, 255, 1) 52%
+            );
+            animation: roll 3s linear alternate infinite;
+        }
+  
     </style>
 </head>
 <body>
@@ -88,6 +165,9 @@
                         <div class="yuan2"></div>
                     </div>
                 </div>
+            </div>
+            <div class="ball">
+                <div class="innerBall"></div>
             </div>
         </div>
     </div>
