--- a/src/index2.html
+++ b/src/index2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>画皮卡丘</title>
     <style>
         * {
             padding: 0;
@@ -119,7 +119,7 @@
         }
         .ball{
             background: rgb(255, 27, 27);
-            background: rgb(255, 27, 27);
+
             background: linear-gradient(
                 180deg,
              rgba(255, 27, 27, 1) 48%,
